fix: button bug on small screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -399,6 +399,7 @@ body {
     padding-top: 16px;
     padding-bottom: 16px;
     font-size: 16px;
+    white-space: nowrap;
   }
 
 
